umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_hcn.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["H#v" "C#v4" "N#n#v3"]
      :bonds [[0 1 :single] [1 2 :triple]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["H#v" "C#v4" "N#n#v3"]
      :bonds [[0 1 :single] [1 2 :triple]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
