umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_hno2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["H#v" "O#n2#v2" "N#n#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]
      :charge 0
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["H#v" "O#n2#v2" "N#n#v3" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :double]]
      :charge 0
      :spin "#u0#s1"}
    :success true}}
