umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_hno3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "H#v" "1" "O#n2#v2" "2" "N#c+#v4" "3" "O#n2#v2" "4" "O#c-#n3#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "H#v" "1" "O#n2#v2" "2" "N#c+#v4" "3" "O#n2#v2" "4" "O#c-#n3#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "1"]] :charge 0 :spin "#u0 #s1"}}}
