umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_hocn.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["H#v" "O#n2#v2" "C#v4" "N#n#v3"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :triple]]}
    :success true}
  :counts {
    :output {
      :atoms ["H#v" "O#n2#v2" "C#v4" "N#n#v3"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :triple]]}
    :success true}}
